--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de John Gasca">
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/FOTO-JHON.jpg.png" alt="Foto de John Gasca">
         <h1>Hola, soy John Gasca</h1>
         <h2>Ingeniero Full-Stack | Desarrollador Java | RPA | DevOps | Scrum | Automatización de Procesos | Soluciones Tecnológicas</h2>
       </div>
@@ -126,12 +126,12 @@
             <div class="proyecto">
               <img src="imagenes/proyecto1.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 1</p>
+                <p>Ecommerce estudiantil</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/mariojar31/Tarea6-Proyecto" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://www.freecodecamp.org/espanol/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://mariojar31.github.io/Tarea6-Proyecto/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -143,12 +143,12 @@
             <div class="proyecto">
               <img src="imagenes/proyecto2.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 2</p>
+                <p>Pagina de contacto</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/bmsx24/ContactUs" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://www.freecodecamp.org/espanol/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://bmsx24.github.io/ContactUs/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -160,12 +160,12 @@
             <div class="proyecto">
               <img src="imagenes/proyecto3.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 3</p>
+                <p>Landing page</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/bmsx24/hackaton1" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://www.freecodecamp.org/espanol/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://bmsx24.github.io/hackaton1/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -225,17 +225,17 @@
           </div>
         </div>
       </div>
-      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+      <!--<a href="https://github.com/" target="_blank" rel="noopener noreferrer">
         <button type="button" class="btn btn-info">
           Ver más proyectos
           <i class="bi bi-arrow-right-circle-fill"></i>
         </button>
-      </a>
+      </a> -->
     </section>
 
     <!-- Articulos -->
-    <section class="articulos justify-content-start">
-      <h2 class="seccion-titulo texto-negro">Artículos</h2>
+    <section class="articulos justify-content-start seccion-oscura">
+      <h2 class="seccion-titulo">Certificaciones</h2>
       <div class="card">
         <div class="card-header">
           Más recientes
@@ -268,12 +268,12 @@
           </a>
         </ul>
       </div>
-      <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+      <!--<a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
         <button type="button" class="btn btn-info">
-          Ver más artículos
+          Ver más certificaciones
           <i class="bi bi-arrow-right-circle-fill"></i>
         </button>
-      </a>
+      </a> -->
     </section>
 
     <!-- Testimonios -->
@@ -297,10 +297,11 @@
           <div class="carousel-item">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <p class="testimonio-texto">Reconocemos su gran desempeño y el cumplimiento de sus funciones de manera satisfactoria como Monitor
+                de Automatización de Proceso Bilingüe, en el área de Operaciones.</p>
               <div class="testimonio-info">
-                <p class="cliente">Nora</p>
-                <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
+                <p class="cliente">Maria Ines</p>
+                <p class="cargo">Beecker Academy Manager</p>
               </div>
             </div>
           </div>
@@ -338,7 +339,7 @@
               Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
             </div>
             <div class="col-12 col-md-4">
-              <a href="mailto:janedoe@micorreo.com">
+              <a href="mailto:bmsx_12@hotmail.com">
                 <button type="button">  
                   Contacto
                   <i class="bi bi-envelope-check-fill"></i>
@@ -355,23 +356,23 @@
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
       <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
+        <!--<a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
-        </a>
-        <a href="https://github.com/freeCodeCamp/freeCodeCamp" target="_blank" rel="noopener noreferrer">
+        </a>-->
+        <a href="https://github.com/bmsx24" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/john-gasca-dev" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/freecodecamp/" target="_blank" rel="noopener noreferrer">
+        <!--<a href="https://www.instagram.com/freecodecamp/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
-        </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        </a> -->
+        <a href="mailto:bmsx_12@hotmail.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por John Gasca (2022) &#169;</div>
+      <div class="derechos-de-autor">Creado por John Gasca (2024) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
